Fixed z-index issue with new dropdown implementation

--- a/styles/photoPage.css
+++ b/styles/photoPage.css
@@ -75,7 +75,7 @@ a {
     justify-content: center;
     align-items: center;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 10; /* Sit on top */
     left: 0;
     top: 0;
     width: 100%;
